@@ -1,0 +1,23 @@
+	radix dec
+
+	global	___eeprom_gptrget1
+	global	___eeprom_gptrget2
+	global	___eeprom_gptrget3
+	global	___eeprom_gptrget4
+	global	___eeprom_gptrput1
+	global	___eeprom_gptrput2
+	global	___eeprom_gptrput3
+	global	___eeprom_gptrput4
+
+S___eeprom_gptr_stubs	code
+___eeprom_gptrget1:
+___eeprom_gptrget2:
+___eeprom_gptrget3:
+___eeprom_gptrget4:
+___eeprom_gptrput1:
+___eeprom_gptrput2:
+___eeprom_gptrput3:
+___eeprom_gptrput4:
+	return
+
+	end
